; ModuleID = '/home/carl/AnghaBench/RetroArch/input/common/extr_linux_common.c_linux_terminal_restore_input.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/common/extr_linux_common.c_linux_terminal_restore_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oldKbmd = common dso_local global i32 0, align 4
@KDSKBMODE = common dso_local global i32 0, align 4
@linux_stdin_claimed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linux_terminal_restore_input() #0 {
  %1 = load i32, i32* @oldKbmd, align 4
  %2 = icmp eq i32 %1, 65535
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = load i32, i32* @KDSKBMODE, align 4
  %6 = load i32, i32* @oldKbmd, align 4
  %7 = call i64 @ioctl(i32 0, i32 %5, i32 %6)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %4
  br label %12

10:                                               ; preds = %4
  %11 = call i32 (...) @linux_terminal_flush()
  store i32 65535, i32* @oldKbmd, align 4
  store i32 0, i32* @linux_stdin_claimed, align 4
  br label %12

12:                                               ; preds = %10, %9, %3
  ret void
}

declare dso_local i64 @ioctl(i32, i32, i32) #1

declare dso_local i32 @linux_terminal_flush(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
